tests/vendor/invalid/semantics/undeclared_variable_in_case.c
//tags: simple, switch
int main() {
    int a = 10;
    switch (a) {
        case 1:
            return b;
            break;

        default:
            break;
    }
    return 0;
}